# scrooge-bank-api-demo

./: README.md  cosmic-ray.toml  pyproject.toml  tox.ini
docs/: openapi.yaml
